@@ -24,6 +24,7 @@ export(EGA)
 export(EGA.estimate)
 export(EGA.fit)
 export(Embed)
+export(LCT)
 export(bootEGA)
 export(cmi)
 export(dimStability)
@@ -60,3 +61,5 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,combn)
 importFrom(utils,packageDescription)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
