@@ -68,10 +68,9 @@ boot.wmt <- bootEGA(data = wmt, n = 100, typicalStructure = TRUE,
 plot.typicalStructure = TRUE, model = "glasso",
 type = "parametric", ncores = 4)
 
-}
-
 # Estimate item stability statistics
 itemStability(boot.wmt, orig.wc = ega.wmt$wc)
+}
 
 }
 \references{
