@@ -1,5 +1,7 @@
 Changes in version 0.9.5
 
+o ADD: loadings comparison test function added (see `LCT`)
+
 o FIX: named community memberships in `itemStability` and `dimStability`
 
 o UPDATE: `plot`, `print`, and `summary` methods all moved into single .R files (no effect on user's end)
